remove clear all link from logo; fix chart refresh after clear all; 10% gap for scales with consistent values

--- a/logspace-frontend/src/client/header/header.styl
+++ b/logspace-frontend/src/client/header/header.styl
@@ -15,7 +15,6 @@
   color $color3
   font-size 2.0rem
   text-transform uppercase
-  cursor pointer
   width 110px
 
  .header .options-button
